--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
